--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="example.js"></script>
     <script src="datetimepicker.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://zhaber.github.io/datetimepicker/datetimepicker.css" type="text/css" rel="stylesheet">  
+    <link href="datetimepicker.css" type="text/css" rel="stylesheet">  
   </head>
   <body> 
 
